Updated ocp maven plugin